// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timeline Basic rundown 1`] = `
Array [
  Object {
    "_id": "mockStudio11",
    "generated": 12345,
    "timeline": Array [
      Object {
        "classes": Array [
          "rundown_active",
        ],
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "while": 1,
        },
        "id": "playlist_randomId9002_status",
        "layer": "rundown_status",
        "objectType": "rundown",
      },
      Object {
        "children": Array [],
        "content": Object {
          "deviceType": 0,
          "type": "group",
        },
        "enable": Object {
          "start": "now",
        },
        "id": "part_group_randomId9002_part0_0_randomId9007",
        "isGroup": true,
        "isPartGroup": true,
        "layer": "",
        "objectType": "rundown",
        "priority": 5,
      },
      Object {
        "classes": Array [],
        "content": Object {
          "callBack": "partPlaybackStarted",
          "callBackData": Object {
            "partInstanceId": "randomId9002_part0_0_randomId9007",
            "rundownPlaylistId": "playlist_randomId9002",
          },
          "callBackStopped": "partPlaybackStopped",
          "deviceType": 0,
          "type": "callback",
        },
        "enable": Object {
          "start": 0,
        },
        "id": "part_group_firstobject_randomId9002_part0_0_randomId9007",
        "inGroup": "part_group_randomId9002_part0_0_randomId9007",
        "layer": "group_first_object",
        "objectType": "rundown",
      },
      Object {
        "children": Array [],
        "content": Object {
          "deviceType": 0,
          "type": "group",
        },
        "enable": Object {
          "start": 0,
        },
        "id": "piece_group_randomId9002_part0_0_randomId9007_randomId9002_piece001",
        "inGroup": "part_group_randomId9002_part0_0_randomId9007",
        "isGroup": true,
        "layer": "vt0",
        "metaData": Object {
          "pieceId": "randomId9002_part0_0_randomId9007_randomId9002_piece001",
        },
        "objectType": "rundown",
        "priority": 5,
      },
    ],
    "timelineHash": "randomId9012",
  },
]
`;

exports[`Timeline Basic rundown 2`] = `
Array [
  Object {
    "_id": "mockStudio11",
    "generated": 12345,
    "timeline": Array [
      Object {
        "classes": Array [
          "rundown_active",
        ],
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "while": 1,
        },
        "id": "playlist_randomId9002_status",
        "layer": "rundown_status",
        "objectType": "rundown",
      },
      Object {
        "children": Array [],
        "content": Object {
          "deviceType": 0,
          "type": "group",
        },
        "enable": Object {
          "setFromNow": true,
          "start": 100000,
        },
        "id": "part_group_randomId9002_part0_0_randomId9007",
        "isGroup": true,
        "isPartGroup": true,
        "layer": "",
        "objectType": "rundown",
        "priority": 5,
      },
      Object {
        "classes": Array [],
        "content": Object {
          "callBack": "partPlaybackStarted",
          "callBackData": Object {
            "partInstanceId": "randomId9002_part0_0_randomId9007",
            "rundownPlaylistId": "playlist_randomId9002",
          },
          "callBackStopped": "partPlaybackStopped",
          "deviceType": 0,
          "type": "callback",
        },
        "enable": Object {
          "start": 0,
        },
        "id": "part_group_firstobject_randomId9002_part0_0_randomId9007",
        "inGroup": "part_group_randomId9002_part0_0_randomId9007",
        "layer": "group_first_object",
        "objectType": "rundown",
      },
      Object {
        "children": Array [],
        "content": Object {
          "deviceType": 0,
          "type": "group",
        },
        "enable": Object {
          "start": 0,
        },
        "id": "piece_group_randomId9002_part0_0_randomId9007_randomId9002_piece001",
        "inGroup": "part_group_randomId9002_part0_0_randomId9007",
        "isGroup": true,
        "layer": "vt0",
        "metaData": Object {
          "pieceId": "randomId9002_part0_0_randomId9007_randomId9002_piece001",
        },
        "objectType": "rundown",
        "priority": 5,
      },
    ],
    "timelineHash": "randomId9013",
  },
]
`;

exports[`Timeline Basic rundown 3`] = `
Array [
  Object {
    "_id": "mockStudio11",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint7",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9017",
  },
]
`;
